# bd-freecad-library

./: .gitignore  CONTRIBUTING.md  NOTICE  README.md  pyproject.toml
docs/standards/en_10058/: README.md
docs/standards/iso4762/: DIMENSIONS.md  README.md
docs/standards/iso7093/: DIMENSIONS.md  README.md
src/bd_freecad_library/: __init__.py
src/bd_freecad_library/curated/: __init__.py
src/bd_freecad_library/standards/: __init__.py  din_1025_2_he_b.py  en_10058.py  en_10058_manifest.py  iso4762.py  iso7093.py  iso7093_manifest.py
tests/: _validation.py  test_din_1025_2_he_b.py  test_en_10058.py  test_iso4762.py  test_iso7093.py
tools/: regenerate.sh
